<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmailToUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/textview_shape2"
            android:padding="5dp"
            android:text="@string/user_name"
            android:textColor="#000"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/User_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_shape"
            android:hint="@string/description"
            android:padding="10dp"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/textview_shape2"
            android:padding="5dp"
            android:text="@string/user_email"
            android:textColor="#000"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/User_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_shape"
            android:hint="@string/user_email"
            android:padding="10dp"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/textview_shape2"
            android:padding="5dp"
            android:text="User's Message"
            android:textColor="#000"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/User_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_shape"
            android:hint="Message"
            android:padding="10dp"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/textview_shape2"
            android:padding="5dp"
            android:text="Our Message"
            android:textColor="#000"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/textOfEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_shape"
            android:hint="Type here"
            android:padding="10dp"
            android:textSize="16sp" />
    </LinearLayout>


    <!--    <TextView-->
    <!--        android:id="@+id/User_name"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="User Name" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/User_email"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="email" />-->
    <!--    <TextView-->
    <!--        android:id="@+id/User_message"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="User's message" />-->

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="ENTER MESSAGE : " />-->

    <!--    <EditText-->
    <!--        android:id="@+id/textOfEmail"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:importantForAutofill="no"-->
    <!--        android:inputType="text" />-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_bg"
            android:padding="3dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="Send"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_another"
            android:text="@string/clear"
            android:textColor="#3700B3"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>