<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".EnterPackageActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/design_default_color_primary"
            android:gravity="end"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="#ffffff" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/textview_shape2"
                        android:padding="5dp"
                        android:text="@string/name"
                        android:textColor="#000"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/editText_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_shape"
                        android:hint="@string/name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/textview_shape2"
                        android:padding="5dp"
                        android:text="Price"
                        android:textColor="#000"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/money"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_shape"
                        android:hint="money"
                        android:padding="10dp"

                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/textview_shape2"
                        android:padding="5dp"
                        android:text="@string/location"
                        android:textColor="#000"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_shape"
                        android:hint="@string/location"
                        android:padding="10dp"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/textview_shape2"
                        android:padding="5dp"
                        android:text="@string/duration"
                        android:textColor="#000"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_shape"
                        android:hint="@string/duration"
                        android:padding="10dp"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/textview_shape2"
                        android:padding="5dp"
                        android:text="HighLights"
                        android:textColor="#000"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/editText_Highlight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_shape"
                        android:hint="HighLights"
                        android:padding="10dp"
                        android:textSize="16sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/textview_shape2"
                        android:padding="5dp"
                        android:text="Most Famous For"
                        android:textColor="#000"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/editText_Famour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_shape"
                        android:hint="Famous Places"
                        android:padding="10dp"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/textview_shape2"
                        android:padding="5dp"
                        android:text="Description"
                        android:textColor="#000"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_shape"
                        android:hint="Description"
                        android:padding="10dp"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/textview_shape2"
                        android:padding="5dp"
                        android:text="Add daily iternary seperated by comma"
                        android:textColor="#000"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/editText_DailyEternary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_shape"
                        android:hint="Add daily iternary seperated by comma"
                        android:padding="10dp"
                        android:textSize="16sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/textview_shape2"
                        android:padding="5dp"
                        android:text="Select image"
                        android:textColor="#000"
                        android:textStyle="normal" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/textview_shape"
                        android:minHeight="50dp"
                        android:padding="10dp"
                        android:text=""
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <Button
                        android:id="@+id/edit_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/btn_bg"
                        android:padding="3dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="Save"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_Delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_bg_another"
                        android:text="clear"
                        android:textColor="#3700B3"
                        android:textSize="17sp" />
                </LinearLayout>

            </LinearLayout>


            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="vertical">-->

            <!--                <TextView-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginStart="40dp"-->
            <!--                    android:layout_marginEnd="40dp"-->
            <!--                    android:text="New Package"-->
            <!--                    android:textSize="40sp"-->
            <!--                    android:textStyle="bold" />-->

            <!--                <LinearLayout-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_margin="3dp"-->
            <!--                    android:orientation="horizontal">-->

            <!--                    <TextView-->
            <!--                        android:layout_width="150dp"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:paddingStart="5dp"-->
            <!--                        android:text="Select image :"-->
            <!--                        android:textSize="16sp" />-->

            <!--                    <ImageView-->
            <!--                        android:id="@+id/imageView"-->
            <!--                        android:layout_width="match_parent"-->
            <!--                        android:layout_height="200dp"-->
            <!--                        android:background="@drawable/btn_bg_another"-->
            <!--                        android:contentDescription="TODO" />-->


            <!--                </LinearLayout>-->


            <!--            </LinearLayout>-->
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>